--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,7 @@ select,input,textarea{
     background-color: #ffebf5;
     border-color: #c586a5 ;
 }
+
+.input {
+  @apply border border-gray-300 rounded px-3 py-2 w-full focus:outline-none focus:ring focus:ring-blue-200;
+}
